feat(sign-up): user sign up is fully functional and ready to use. fix(breadcrumb): fixed breadcrumb from showing 'category' or 'product' instead of logos associated with them.fix(icon): added a new dependency, 'lucide-react' and updated some icons to be replaced with the icons from lucide's library.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,10 @@ button{
   @apply text-gray-800 dark:text-gray-200 mb-2 block text-xl;
 }
 
+.signin-input{
+  @apply bg-gray-100 w-full text-gray-800 text-sm px-4 py-3.5 rounded-md  outline-blue-500 transition-all;
+}
+
 .signup-loader{
   @apply flex justify-center items-center h-40 w-40 bg-black/5 dark:bg-white/5 backdrop-blur-sm fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 rounded-md z-50;
 }
