feat(search-bar): implemented a search bar to filter products as per user's demand. fix(UI): Updated styles for various components.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  @apply bg-[#fffcfa] dark:bg-gray-900 text-black dark:text-white overflow-x-hidden ;
+  @apply bg-[#fffcfa] dark:bg-gray-900 text-black dark:text-white;
 }
 
 .hoverText:hover{
@@ -42,4 +42,8 @@ button{
 }
 .userDetail-add-btn{
   @apply flex w-full items-center justify-center gap-2 rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-900 hover:bg-gray-100 focus:z-10 outline-none focus:ring-4 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white;
+}
+
+.tab{
+  @apply p-4 text-gray-900 dark:text-gray-100 dark:hover:text-purple-500 hover:text-purple-500;
 }
